--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,20 @@
-<form [formGroup]="form" (ngSubmit)=dataSubmit()>
+<!-- <form [formGroup]="form" (ngSubmit)=dataSubmit()>
 	username<input type="text" formControlName="username">
 	password<input type="text" formControlName="password">
-	<button type="submit"></button>
+	<button type="submit">submit</button>
+</form> -->
+<div class="wrapper-login login-container">
+<div class="container">
+<form class="form-signin" [formGroup]="form" (ngSubmit)=dataSubmit() >
+  <div class="form-group">
+    <label for="exampleInputEmail1">Username/Email</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" formControlName="username" required>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" formControlName="password" required>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+</div>
+</div>
